--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>permissions</id>
+            <name>Permissions</name>
+            <url>https://repo.rabbithole.com.br/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>permissions</id>
+            <name>Permissions</name>
+            <url>https://repo.rabbithole.com.br/releases</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
