--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
             <groupId>br.com.rabbithole</groupId>
             <artifactId>Permissions</artifactId>
             <version>1.1.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>br.com.rabbithole</groupId>
+            <artifactId>WarnLib</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
